<resources>

    <string name="app_name">FèBé</string>


    <string name="facebook_app_id">168830133748079</string>

    <string name="fb_login_protocol_scheme">fb168830133748079</string>

    <string name="twitter_consumer_key">3YTldmp6c7hTdP8dPYSKNmCqT</string>

    <string name="twitter_consumer_secret">Uap0PJ3q54GBUx1bB7ApH8ABLqnZv9ArhOUspZq7r2e4VirapF</string>


    <string name="wi_no_location">Your Location List is empty\n\nClick here to add a location !</string>

    <string name="wi_no_network">No Internet Connection\n\nClick here to try again !</string>

    <string name="ap_dismiss">Dismiss !</string>

    <string name="admob_banner_my_location">ca-app-pub-6196885651315287/6066562253</string>

    <string name="admob_banner_other_locations">ca-app-pub-6196885651315287/9020028650</string>

    <string name="admob_banner_gallery">ca-app-pub-6196885651315287/1496761856</string>

    <string name="admob_banner_settings">ca-app-pub-6196885651315287/2973495055</string>

    <string name="admob_banner_contact_us">ca-app-pub-6196885651315287/4450228259</string>



    <string name="menu">Menu</string>

    <string-array name="menu_titles">
        <item>Home</item>
        <item>Messenger</item>
        <item>Social Media Tasks</item>
        <item>Home Assistant</item>
        <item>Maps</item>
        <item>Weather Forecast</item>
        <item>Alarms, Notes and Reminders</item>
        <item>Contact Us</item>
        <item>Log Out</item>
    </string-array>

    <array name="menu_icons">
        <item>@drawable/me_home</item>
        <item>@drawable/me_messenger</item>
        <item>@drawable/me_soc_media</item>
        <item>@drawable/me_home_assistant</item>
        <item>@drawable/me_maps</item>
        <item>@drawable/me_weather_forecast</item>
        <item>@drawable/me_anr</item>
        <item>@drawable/me_contact_us</item>
        <item>@drawable/me_log_out</item>
    </array>


    <string name="homepage">Home</string>

    <string name="hp_how_can">Hi, How can I help you ?</string>

    <string name="hp_tts_start">Hi, I can help you. Type in the box or click on the mic to search !</string>

    <string name="hp_phone_number">Mobile Number or Contact Name</string>

    <string name="hp_message">Message</string>

    <string name="hp_pow_gcsapi">powered by Google Custom Search API</string>

    <string name="hp_news">News</string>

    <string name="hp_general_news">Top Headlines</string>

    <string name="hp_business_news">Business News</string>

    <string name="hp_technology_news">Technology News</string>

    <string name="hp_sports_news">Sports News</string>

    <string name="hp_entertainment_news">Entertainment News</string>

    <string name="hp_pow_newsapi">powered by News API</string>


    <string name="maps">Maps</string>

    <string name="ma_from_location">From Location</string>

    <string name="ma_to_location">To Location</string>

    <string name="ma_your_location">Your Location</string>


    <string name="weather_forecast">Weather Forecast</string>

    <string name="wf_enter_location">Enter a Location &#8230;</string>

    <string name="wf_hourly">Hourly (3 hours)</string>

    <string name="wf_hours">48 hours</string>

    <string name="wf_other_details">Other Details</string>

    <string name="wf_conditions">Conditions</string>

    <string name="wf_wind_speed">Wind Speed</string>

    <string name="wf_wind_angle">Wind Angle</string>

    <string name="wf_sunrise_time">Sunrise Time</string>

    <string name="wf_sunset_time">Sunset Time</string>

    <string name="wf_daily">Daily</string>

    <string name="wf_days">10 days</string>

    <string name="wf_co_febuweather">Click here to install FebuWeather for more Weather Updates !</string>


    <string name="social_media">Social Media Tasks</string>

    <string name="sm_send_an_email">SEND AN EMAIL</string>

    <string name="sm_facebook_share">SHARE ON FACEBOOK</string>

    <string name="sm_twitter_share">SHARE ON TWITTER</string>

    <string name="sm_from_email">From Email - Id</string>

    <string name="sm_to_email">To Email - Id</string>

    <string name="sm_subject">Subject</string>

    <string name="sm_message">Message</string>

    <string name="sm_title">Title</string>

    <string name="sm_description">Description</string>

    <string name="sm_send">SEND !</string>

    <string name="sm_share">SHARE !</string>


    <string name="home_assistant">Home Assistant</string>

    <string name="ha_temperature">Temperature</string>

    <string name="ha_device_status">Device Status</string>

    <string name="ha_off">Off</string>

    <string name="ha_on">On</string>

    <string name="ha_device_switch">Device Switch</string>


    <string name="anr">Alarms, Notes and Reminders</string>

    <string name="anr_alarms">Alarms</string>

    <string name="anr_alarms_settings">Alarms Settings</string>

    <string name="anr_al_set_ringtone">Set Ringtone !</string>

    <string name="anr_al_set_label">Set Label &#8230;</string>

    <string name="anr_al_vibration">Vibration</string>

    <string name="anr_al_alarm_duration">Alarm Duration</string>

    <string name="anr_al_snooze_duration">Snooze Duration</string>

    <string name="anr_al_time">Time</string>

    <string name="anr_al_days">Days</string>

    <string name="anr_al_sunday">Sunday</string>

    <string name="anr_al_monday">Monday</string>

    <string name="anr_al_tuesday">Tuesday</string>

    <string name="anr_al_wednesday">Wednesday</string>

    <string name="anr_al_thursday">Thursday</string>

    <string name="anr_al_friday">Friday</string>

    <string name="anr_al_saturday">Saturday</string>

    <string name="anr_notes">Notes</string>

    <string name="anr_notes_settings">Notes Settings</string>

    <string name="anr_type_in_note">Type in your Note &#8230;</string>

    <string name="anr_reminders">Reminders</string>

    <string name="anr_reminders_settings">Reminders Settings</string>

    <string name="anr_type_in_reminder">Type in your Reminder &#8230;</string>


    <string name="contact_us">Contact Us</string>

    <string name="cu_contact_us">Send us your valuable feedback describing your experience while using FèBé.
        \n\nWe will be happy to reply and to take up every suggestion seriously thereby making each of our
        user\'s experience an even more Febulous One !</string>

    <string name="cu_full_name">Name</string>

    <string name="cu_email_id">Email - Id</string>

    <string name="cu_subject">Subject</string>

    <string name="cu_message">Type in your Message &#8230;</string>

    <string name="cu_send_message">Send Message !</string>

    <string name="cu_rate_us">Rate Us !</string>

    <string name="cu_find_us">Check out our other Applications !</string>


    <string name="type_in_your_message">Type in your Message &#8230;</string>

    <string name="fetch_older_messages">FETCH OLDER MESSAGES &#8230;</string>

    <string name="username">Username</string>

    <string name="timestamp">Timestamp</string>


    <string name="forgot_password_send_email">SEND RECOVERY EMAIL !</string>

    <string name="forgot_password_enter_email">Enter Your Email - Id</string>


    <string name="login_enter_credentials">Enter Your Credentials</string>

    <string name="login_log_in">LOG IN !</string>

    <string name="login_forgot_password">Forgot Your Password ?</string>

    <string name="login_recover_password">RECOVER IT !</string>

    <string name="login_no_account">Don\'t have an Account ?</string>

    <string name="login_sign_up">SIGN UP !</string>


    <string name="signin_sign_up">Enter Your Credentials to Sign Up for a Febulous Experience !</string>

    <string name="signin_tandc">By Signing In, You agree to our Terms and Conditions.\nClick Here to download it !</string>

    <string name="signin_sign_in">SIGN IN !</string>

    <string name="signin_sign_in_with">Or\n\nSign In with</string>


    <string name="email_id">Email - Id</string>

    <string name="digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>

    <string name="password">Password</string>


    <string name="messenger">Messenger</string>

    <string name="mes_search_users">Search Users &#8230;</string>


    <string name="notifications">Notifications</string>


</resources>