<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/cu_background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent">

        <ImageButton
            android:id="@+id/cu_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical"
            android:background="@drawable/app_menu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/contact_us"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@null"
            android:layout_gravity="center_vertical|end"
            android:background="@drawable/me_contact_us"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:layout_marginTop="20dp"
            android:background="@drawable/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/app_name"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/cu_contact_us"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"/>
<!--
        <com.google.android.gms.ads.AdView
            android:id="@+id/cu_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            android:layout_margin="20dp"
            ads:adUnitId="@string/admob_banner_contact_us">
        </com.google.android.gms.ads.AdView>
-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/cu_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryTransparent77"
                android:hint="@string/cu_full_name"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold"
                android:inputType="textCapWords|textMultiLine"
                android:gravity="start"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:padding="10dp" />

            <EditText
                android:id="@+id/cu_email_id"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryTransparent77"
                android:hint="@string/cu_email_id"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:gravity="start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_marginBottom="10dp" />

            <EditText
                android:id="@+id/cu_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorSecondaryTransparent77"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:hint="@string/cu_subject"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cu_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryTransparent77"
                android:hint="@string/cu_message"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginBottom="30dp"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/cu_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:background="@drawable/cu_send_message"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cu_send_message"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cu_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:background="@drawable/cu_rate_us"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cu_rate_us"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cu_find_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"
                    android:background="@drawable/cu_find_us" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cu_find_us"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>